--- a/web/index.html
+++ b/web/index.html
@@ -210,6 +210,7 @@
           }
         }
     </style>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2fWxeerzaACQnhahbU85T83o4fTTOszw"></script>
 </head>
 
 <body>
