--- a/web/index.html
+++ b/web/index.html
@@ -210,6 +210,7 @@
           }
         }
     </style>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2fWxeerzaACQnhahbU85T83o4fTTOszw"></script>
 </head>
 
 <body>
@@ -245,5 +246,6 @@
       }, 1000);
     };
 </script>
+<script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
