--- a/web/index.html
+++ b/web/index.html
@@ -210,7 +210,8 @@
           }
         }
     </style>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2fWxeerzaACQnhahbU85T83o4fTTOszw"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2fWxeerzaACQnhahbU85T83o4fTTOszw&libraries=geometry,visualization"></script>
+<!--    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2fWxeerzaACQnhahbU85T83o4fTTOszw"></script>-->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2fWxeerzaACQnhahbU85T83o4fTTOszw&libraries=places"></script>
 
 </head>
